--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -13,12 +13,12 @@ navbar:
       href: license.html
   right:
     - icon: fa-github
-      href: https://github.com/jdblischak/workflowr
+      href: https://github.com/NKweiwang/flash_workflow
 output:
   html_document:
     toc: true
     toc_float: true
-    theme: cosmo
+    theme: spacelab
     highlight: textmate
     include:
       after_body: include/footer.html
